<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextAppearance.M3.Sys.Typescale.TitleLarge.."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_note" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/text_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/an_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/an_et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_date"
            app:endIconDrawable="@drawable/baseline_edit_calendar_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/an_et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:allowClickWhenDisabled="true"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.M3.Sys.Typescale.TitleMedium."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_notify" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/an_cb_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/an_bt_done"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/text_add_note" />

            <Button
                android:id="@+id/an_bt_cancel"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/text_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
